--- a/on-tour-app/index.html
+++ b/on-tour-app/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0b0f14" />
-    <title>On Tour App</title>
+  <title>On Tour App</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <style>body{margin:0;font:14px system-ui;background:#111;color:#ccc}</style>
   </head>
   <body>
+    <!-- GH Pages SPA redirect fix (rafgraph) -->
+    <script>
+      (function(l){
+        if (l.search && l.search.indexOf('?p=') !== -1) {
+          var p = new URLSearchParams(l.search).get('p');
+          if (p) l.replace(l.origin + l.pathname.replace(/\/index\.html$/, '') + p + (l.hash||''));
+        }
+      })(window.location);
+    </script>
     <script>document.body.dataset.inline='ok';</script>
     <div id="root"><div style="padding:24px;font:12px system-ui;opacity:.6">Fallback inline (index.html)</div></div>
     <script type="module" src="/src/main.tsx"></script>
