--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
 </head>
 
 <body>
+  <!-- Debug script to verify page loads -->
+  <script>
+    console.log('[INDEX.HTML] Page loading...', {
+      timestamp: new Date().toISOString(),
+      userAgent: navigator.userAgent,
+      location: window.location.href
+    });
+    window.onerror = function(msg, url, line, col, error) {
+      console.error('[GLOBAL ERROR]', { msg, url, line, col, error });
+      return false;
+    };
+  </script>
+  
   <!-- GH Pages SPA redirect fix (rafgraph) -->
   <script>
     (function (l) {
