--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
       <div>Loading On Tour App...</div>
     </div>
   </div>
+  <!-- CRITICAL: Load framer-motion FIRST to prevent TDZ errors -->
+  <script type="module" src="/src/framer-preload.ts"></script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
